crates/tt-cli/src/commands/snapshots/tt_cli__commands__proposals__tests__formats_pending_proposals_for_listing.snap
---
source: crates/tt-cli/src/commands/proposals.rs
expression: "format_proposals(&db, timestamp() + chrono::Duration::hours(2)).unwrap()"
---
PROPOSALS

Ordered by attention resolved: the user_message and focus events each would attribute.

ID        Age   Attention  Scope       Proposed stream  Confidence  Reasoning
--------  ----  ---------  ----------  ---------------  ----------  ---------
12345678    2h          0  1 session   Existing stream         85%  Matches the active project.
abcdefgh    2h          0  2 events    new: New stream         85%  This reasoning deliberately exceeds eighty characters so proposal reviews rem...
