crates/tt-cli/src/commands/snapshots/tt_cli__commands__proposals__tests__lists_the_proposal_resolving_the_most_attention_first.snap
---
source: crates/tt-cli/src/commands/proposals.rs
expression: "format_proposals(&db, timestamp() + chrono::Duration::hours(2)).unwrap()"
---
PROPOSALS

Ordered by attention resolved: the user_message and focus events each would attribute.

ID        Age   Attention  Scope       Proposed stream  Confidence  Reasoning
--------  ----  ---------  ----------  ---------------  ----------  ---------
22222222    1h          3  1 session   new: Busy work          85%  Matches the active project.
11111111    2h          1  1 session   new: Quiet work         85%  Matches the active project.
